--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,9 +308,11 @@ form > h2 {
         position: absolute;
         left: 65%;
         top: -1%;
+        right: 0.2%;
     }
     hr {
-        margin-top: 10%;
+        margin-top: 3%;
+        margin-bottom: 1%;
     }
     .welcome {
         font-size: 25px;
@@ -654,7 +656,7 @@ footer h2 {
         margin-left: 3%;
         position: absolute;
         margin-top: 1%;
-        top: 16%%;
+        top: 16%;
     }
     #logo {
         max-width: 50%;
