--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -736,6 +736,7 @@ footer h2 {
         margin-bottom: 3px;
         position: inherit;
         top: 5%;
+        max-width: 30%;
         }
     #hero-image {
         display: flex;
@@ -937,9 +938,10 @@ footer h2 {
 @media screen and (min-width: 320px) and (max-width: 320px) {
 #logo {
     display: flex;
-    font-size: xx-large;
+    font-size: 25px;
     line-height: 40px;
     margin-left: -2%;
+    margin-top: -5%;
     }
 #menu-bar {
     display: flex;
@@ -951,11 +953,11 @@ footer h2 {
 #menu-bar li {
     margin-right: 10%;
 }
-    .megan {
+.megan {
     font-size: small;
     margin-bottom: 8px;
     position: absolute;
-    top: 22%;
+    top: 5%;
     }
     #hero-image {
     display: flex;
