--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -941,12 +941,11 @@ footer h2 {
     font-size: 25px;
     line-height: 40px;
     margin-left: -2%;
-    margin-top: -5%;
+    margin-right: 40%;
     }
 #menu-bar {
     display: flex;
     justify-content: flex-start;
-    margin-top: -29%;
     font-size: 15px;
     line-height: 5px;
     }
@@ -956,8 +955,7 @@ footer h2 {
 .megan {
     font-size: small;
     margin-bottom: 8px;
-    position: absolute;
-    top: 5%;
+    top: 10%;
     }
     #hero-image {
     display: flex;
