--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,13 +253,14 @@ input[type=submit] {
 	background-color: #719B43;
 	color: white;
 	border: none;
-	border-radius: 7px;}
+	border-radius: 7px;
+    font-size: 40px;
+}
 #email-field {
     border: solid 1px #719B43;
     border-radius: 5px;
     height: 30px;    
-    text-align: left;
-}
+    text-align: left;}
 form > p {
     margin: 40px;
     color: #4a4a4a;
@@ -313,6 +314,7 @@ form > h2 {
     hr {
         margin-top: 3%;
         margin-bottom: 1%;
+        width: 100%;
     }
     .welcome {
         font-size: 25px;
@@ -424,7 +426,7 @@ form > h2 {
         font-size: 50px;
     }
     .email {
-        font-size: 50px;
+        font-size: 40px;
     }
     #email-field {
         height: 40px;
@@ -475,7 +477,7 @@ form > h2 {
     display: flex;
     margin: 0;
     width: 100%;
-    height: 1200px;
+    height: 900px;
 }
 .map {
     position: relative;
