--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ form > h2 {
     background-blend-mode: darken;
 }
 /*media queries*/
-/* For large to medium screens sizes from 3840px wide and down */
+/* For large screens sizes from 3840px wide and down */
 @media screen and (max-width: 3840px){
     #menu-bar  {
         display: flex;
@@ -314,7 +314,8 @@ form > h2 {
     hr {
         margin-top: 3%;
         margin-bottom: 1%;
-        width: 95%;
+        width: 99%;
+        margin-left: 1rem;
     }
     .welcome {
         font-size: 25px;
@@ -454,7 +455,6 @@ form > h2 {
 }
 /* For large to medium screens sizes from 2560px wide and down */
 @media screen and (max-width: 2560px){
-    
 .meetup-times {
     margin: 0 auto 40px;
 }
@@ -477,7 +477,6 @@ form > h2 {
     display: flex;
     margin: 0;
     width: 100%;
-    height: 900px;
 }
 .map {
     position: relative;
@@ -492,7 +491,6 @@ footer h2 {
     position: relative;
 }
 }
-
 /* For large to medium screens sizes from 1440px wide and down */
 @media screen and (max-width: 1440px){
     #menu-bar {
@@ -572,9 +570,9 @@ footer h2 {
         height: 450px;
         border-radius: 50%;
         float: left;
-        margin-top: 6%;}
+        margin-top: 18%;}
     #robin {
-        font-size: 20px;
+        font-size: 25px;
     }
     #video {
        width: 80%;
@@ -596,14 +594,14 @@ footer h2 {
        width: 100%;
    }
    .meetup-times {
-    border-radius: 2px;
-    box-sizing: border-box;
-    color: gray;
-    font-size: 20px;
-    margin-left: 20%;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    width: 60%;
+        border-radius: 2px;
+        box-sizing: border-box;
+        color: gray;
+        font-size: 20px;
+        margin-left: 20%;
+        padding-bottom: 5px;
+        padding-top: 5px;
+        width: 60%;
     }   
     .column2 img {
         margin-right: -8%;
@@ -614,6 +612,9 @@ footer h2 {
     }
     #email-field {
         width: 25%;
+    }
+    #thanks {
+        margin-top: 10%;
     }
 }
 
@@ -658,7 +659,7 @@ footer h2 {
         margin-left: 3%;
         position: absolute;
         margin-top: 1%;
-        top: 16%;
+        top: 40%;
     }
     #logo {
         max-width: 50%;
