--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,7 +314,7 @@ form > h2 {
     hr {
         margin-top: 3%;
         margin-bottom: 1%;
-        width: 99%;
+        width: auto;
         margin-left: 1rem;
     }
     .welcome {
