--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,37 +76,28 @@ hr {
   letter-spacing: 0.5px;
 }
 /*biography and portrait*/
-.column {
+/* .column {
   margin: auto;
   justify-content: center;
   display: flex;
   width: 100%;
   padding: 5px;
-}
-#circle {
-  background: url(../images/robin3.webp);
-  height: 500px;
-  width: 500px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: auto;
-  position: relative;
+} */
+#circle img {
+  width: 400px; /* Adjust this value as needed for your desired circle size */
+  height: 400px; /* Set the same value as width to create a square container */
+  overflow: hidden; /* Hide any overflowing content to create a perfect circle */
   border-radius: 50%;
-  float: left;
-  margin-left: 7px;
 }
-.biography {
+/* .biography {
   text-align: center;
   margin: 0;
   text-decoration: underline;
-}
+} */
 #robin {
-  text-align: center;
-  margin: 40px 40px 15% 0;
-  font-size: 27px;
-  display: flex;
-  align-content: center;
-}
+ 
+  
+} 
 #video {
   display: flex;
   width: 100%;
