Adjust hero-image css to not repeat image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,8 @@ hr {
 /*hero image*/
 #hero-image {
   background-image: url(../images/hero-image.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .welcome {
