--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ h3 {
 .megan {
   font-family: "PT Sans Narrow", sans-serif;
   text-transform: capitalize;
+  position: relative;
+  right: 22%;
+  bottom: 25px;
+  
 }
 hr {
   border-top: 1px solid #888e8e;
@@ -35,19 +39,22 @@ hr {
 }
 #logo {
   float: left;
-  font-size: 250%;
+}
+#logo img {
+  border: none;
+  margin-top: 10px;
+  width: 60%;
 }
 
 /*navigation links*/
 #menu-bar {
   font-weight: bold;
-  padding: 25px;
-  margin-bottom: -15px;
+  padding: 35px;
+  margin-bottom: -25px;
 }
 #menu-bar a {
   text-decoration: none;
 }
-
 #menu-bar li:hover {
   transform: scale(1.1);
 }
@@ -79,35 +86,13 @@ hr {
 }
 
 #circle img {
-  width: 350px; /* Adjust this value as needed for your desired circle size */
-  height: 350px; /* Set the same value as width to create a square container */
-  overflow: hidden; /* Hide any overflowing content to create a perfect circle */
+  width: 350px;
+  height: 350px;
+  overflow: hidden;
   border-radius: 50%;
   margin-left: 80px;
 }
 
-
-/*social networks & footer*/
-footer {
-  height: 190px;
-}
-.social-networks {
-  text-align: center;
-}
-.social-networks li {
-  display: inline;
-}
-.social-networks i {
-  font-size: 130%;
-  margin: 30px 0 30px 0;
-  padding: 5%;
-  color: black;
-}
-footer > h2 {
-  text-align: center;
-  color: #888e8e;
-  padding-top: 8%;
-}
 /*book collection*/
 #castle {
   background-image: url(../images/castle.jpeg);
@@ -323,9 +308,7 @@ form > h2 {
   #video-text {
     font-size: 35px;
   }
-  footer h2 {
-    font-size: 40px;
-  }
+
   .social-networks {
     font-size: 25px;
   }
@@ -347,7 +330,7 @@ form > h2 {
     display: flex;
     margin: 0;
     width: auto;
-    height: 1200px;
+    height: auto;
   }
   .book-club {
     display: flex;
@@ -495,11 +478,9 @@ form > h2 {
   hr {
     display: none;
   }
-  header p {
-    max-width: 20%;
-    font-size: 10px;
-    flex: 0 0 50%;
-    margin-left: 3%;
+
+  .nav {
+    background-color: #719b43;
   }
   .row2 {
     margin-left: -85px;
