--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,7 +278,7 @@ hr {
     display: flex;
     margin: 0;
     width: 100%;
-    height: 1200px;
+    height: 600px;
   }
   #video iframe {
     width: 50%;
@@ -291,7 +291,7 @@ hr {
   }
 }
 /* For large to medium screens sizes from 1440px wide and down */
-@media screen and (max-width: 1440px) {
+/* @media screen and (max-width: 1440px) {
   #menu-bar {
     position: inherit;
     margin-top: -1%;
@@ -325,9 +325,9 @@ hr {
     background-position: center;
     margin-left: -12%;
   }
-}
+} */
 /* For large to medium screens sizes from 1024px wide and down */
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
   #menu-bar {
     display: flex;
     flex-direction: column-reverse;
@@ -386,10 +386,10 @@ hr {
   #thanks {
     margin-top: 10%;
   }
-}
+} */
 
 /* For medium to small tablet screens sizes from 768px wide and down */
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   #menu-bar {
     display: flex;
     flex-direction: column-reverse;
@@ -460,9 +460,9 @@ hr {
   #thanks {
     width: 100%;
   }
-}
+} */
 /* For medium to small phone screens sizes from 425 wide and down */
-@media screen and (max-width: 425px) {
+/* @media screen and (max-width: 425px) {
   #logo {
     display: flex;
     font-size: xx-large;
@@ -564,9 +564,9 @@ hr {
     height: 400px;
     width: 100%;
   }
-}
+} */
 /* For medium to small phone screens sizes from 375 wide and down */
-@media screen and (max-width: 375px) {
+/* @media screen and (max-width: 375px) {
   #logo {
     display: flex;
     font-size: xx-large;
@@ -636,6 +636,6 @@ hr {
   #thanks {
     width: 100%;
   }
-}
+} */
 
 
