--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,14 +158,70 @@ ul li:hover {
 /* Newsletter styles */
 
 .newsletter {
-  height: 46px !important;
+  height: 44px !important;
   margin-right: -7%;
 }
 
 form > button:hover {
-  transform: scale(1.03); 
+  transform: scale(1.03);
   transition: 0.6s ease-in-out;
   color: #fafafa;
+}
+
+.newsletter-section {
+  height: 100vh;
+  background-image: url(../images/6duchies.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.newsletter-section {
+  position: relative;
+}
+
+.container {
+  position: relative;
+  z-index: 1;
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.9
+  ); /* Semi-transparent background for text readability */
+  padding: 20px;
+  border-radius: 20px; 
+  width: fit-content;
+}
+
+.newsletter-input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 3px;
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.9
+  ); 
+}
+
+.newsletter-button {
+  padding: 8px 10px;
+  background-color: #D1FAE4;
+  color: black;
+  border: 1px solid #106e20;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.newsletter-button:hover {
+  background-color: #106e20;
+}
+
+.newsletter-section div {
+  margin-top: 8%;
 }
 
 /*media queries*/
@@ -643,5 +699,3 @@ form > button:hover {
     width: 100%;
   }
 } */
-
-
