--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ h3 {
   position: relative;
   right: 20%;
   bottom: 15px;
+  width: 20%;
 }
 hr {
   border-top: 1px solid #888e8e;
@@ -49,14 +50,17 @@ hr {
 /*navigation links*/
 #menu-bar {
   font-weight: bold;
-  padding: 30px;
+  padding: 33px;
   margin-bottom: -20px;
+  letter-spacing: 1px;
 }
+
 #menu-bar a {
   text-decoration: none;
   line-height: 2;
   padding: 10px;
 }
+
 ul li:hover {
   transform: scale(1.1);
   transition: 0.6s ease-in-out;
@@ -189,7 +193,7 @@ form > button:hover {
     0.9
   ); /* Semi-transparent background for text readability */
   padding: 20px;
-  border-radius: 20px; 
+  border-radius: 20px;
   width: fit-content;
 }
 
@@ -198,17 +202,12 @@ form > button:hover {
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-right: 3px;
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.9
-  ); 
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .newsletter-button {
   padding: 8px 10px;
-  background-color: #D1FAE4;
+  background-color: #d1fae4;
   color: black;
   border: 1px solid #106e20;
   border-radius: 5px;
@@ -352,350 +351,3 @@ form > button:hover {
     height: 1200px;
   }
 }
-/* For large to medium screens sizes from 1440px wide and down */
-/* @media screen and (max-width: 1440px) {
-  #menu-bar {
-    position: inherit;
-    margin-top: -1%;
-  }
-  .biography {
-    margin-top: -15px;
-  }
-  hr {
-    margin: 2%;
-  }
-  .book-club {
-    height: 650px;
-  }
-  #castle {
-    height: 650px;
-  }
-  #hero-image {
-    height: 650px;
-  }
-  .column2 {
-    width: 100%;
-    height: 100%;
-  }
-  div iframe {
-    width: 70%;
-    margin-left: 24%;
-  }
-  #video {
-    display: flex;
-    justify-content: center;
-    background-position: center;
-    margin-left: -12%;
-  }
-} */
-/* For large to medium screens sizes from 1024px wide and down */
-/* @media screen and (max-width: 1024px) {
-  #menu-bar {
-    display: flex;
-    flex-direction: column-reverse;
-    font-size: 50px;
-    line-height: inherit;
-    align-items: end;
-  }
-  #logo {
-    max-width: 50%;
-    margin-top: 2%;
-    font-size: 80px;
-  }
-
-  hr {
-    display: none;
-  }
-
-  .nav {
-    background-color: #719b43;
-  }
-  .row2 {
-    margin-left: -85px;
-  }
-  #circle {
-    width: 450px;
-    height: 450px;
-    border-radius: 50%;
-    float: left;
-    margin-top: 18%;
-  }
-  #robin {
-    font-size: 25px;
-  }
-  #video {
-    width: 80%;
-    margin-left: 8%;
-  }
-  .column2 {
-    display: flex;
-    justify-content: center;
-    margin-left: -6%;
-  }
-  #castle {
-    width: 100%;
-  }
-  #hero-image {
-    width: 100%;
-  }
-  .column2 img {
-    margin-right: -8%;
-  }
-  div iframe {
-    width: 100%;
-    margin-left: 70px;
-  }
-  #thanks {
-    margin-top: 10%;
-  }
-} */
-
-/* For medium to small tablet screens sizes from 768px wide and down */
-/* @media screen and (max-width: 768px) {
-  #menu-bar {
-    display: flex;
-    flex-direction: column-reverse;
-    float: right;
-    margin-top: 2px;
-    padding: 0;
-    align-items: flex-end;
-    font-size: 35px;
-    margin-right: 2%;
-  }
-  header p {
-    margin-left: 50px;
-    max-width: 30%;
-  }
-  div iframe {
-    width: 80%;
-    margin-left: 5px;
-  }
-  #castle {
-    display: flex;
-    width: 100%;
-    height: 450px;
-  }
-  #hero-image {
-    display: flex;
-    width: 100%;
-    height: 400px;
-  }
-  .megan {
-    max-width: 40%;
-    margin-left: 3%;
-    margin-top: 1%;
-  }
-  #logo {
-    max-width: 50%;
-    margin-bottom: -10px;
-    margin-top: -3px;
-    margin-left: 1%;
-  }
-  #video {
-    margin-left: 11%;
-  }
-  #video-text {
-    margin-top: 10%;
-  }
-  #circle {
-    width: 400px;
-    height: 400px;
-    position: inherit;
-  }
-  #robin {
-    font-size: 25px;
-    display: contents;
-    position: relative;
-    text-align: center;
-  }
-  #summary {
-    font-size: 25px;
-  }
-  #list {
-    font-size: 25px;
-  }
-  .column2 {
-    position: relative;
-    display: flex;
-    justify-content: center;
-  }
-  #thanks {
-    width: 100%;
-  }
-} */
-/* For medium to small phone screens sizes from 425 wide and down */
-/* @media screen and (max-width: 425px) {
-  #logo {
-    display: flex;
-    font-size: xx-large;
-    line-height: 40px;
-    margin-left: -1%;
-  }
-  #menu-bar {
-    align-items: end;
-    font-size: smaller;
-    float: right;
-    padding: 0;
-    line-height: 1px;
-    position: inherit;
-    margin: 6px;
-  }
-  .megan {
-    font-size: 15px;
-    margin-bottom: 3px;
-    position: inherit;
-    top: 5%;
-    max-width: 30%;
-  }
-  #hero-image {
-    display: flex;
-    width: 100%;
-    height: 200px;
-    margin: 0;
-  }
-  #circle {
-    width: 400px;
-    height: 400px;
-  }
-  .column2 img {
-    width: 100%;
-    margin-left: 10px;
-  }
-  .book-club {
-    display: flex;
-    width: 100%;
-    height: 200px;
-    margin: 0;
-  }
-  #enter {
-    font-size: 30px;
-  }
-  .row img {
-    height: auto;
-    width: 100%;
-  }
-  #robin {
-    font-size: 20px;
-  }
-  .column-a {
-    position: sticky;
-    top: 5px;
-    left: 5px;
-  }
-  .column-b {
-    position: relative;
-    top: 20px;
-    right: 20px;
-  }
-  #video {
-    padding-bottom: 20%;
-    overflow: hidden;
-    position: relative;
-  }
-  #video-text {
-    margin-top: 10%;
-  }
-  #castle {
-    display: flex;
-    width: 100%;
-    height: 200px;
-    margin: 0;
-  }
-  .column2 img {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    margin-left: 25%;
-    width: 80%;
-  }
-  .book-club {
-    display: flex;
-    width: 100%;
-    height: 200px;
-    margin: 0;
-  }
-  #enter {
-    font-size: 30px;
-  }
-  input[type="submit"] {
-    margin-left: 15px;
-    font-size: 35px;
-  }
-  #thanks {
-    height: 400px;
-    width: 100%;
-  }
-} */
-/* For medium to small phone screens sizes from 375 wide and down */
-/* @media screen and (max-width: 375px) {
-  #logo {
-    display: flex;
-    font-size: xx-large;
-  }
-  #menu-bar {
-    display: flex;
-    align-items: end;
-    justify-content: flex-start;
-    font-size: smaller;
-    line-height: 5px;
-    padding: 0;
-    margin-top: -65px;
-  }
-  #menu-bar li {
-    position: inherit;
-    margin-right: 10px;
-    margin-top: 8%;
-  }
-
-  .megan {
-    font-size: 12px;
-    max-width: 35%;
-    position: inherit;
-  }
-  #list {
-    font-size: 18px;
-  }
-  #hero-image {
-    display: flex;
-    width: 100%;
-    height: 200px;
-    margin: 0;
-  }
-  #circle {
-    width: 300px;
-    height: 300px;
-    margin-left: 10%;
-  }
-  .column-a {
-    position: sticky;
-    top: 5px;
-    left: 5px;
-  }
-  .column-b {
-    position: relative;
-    top: 20px;
-    right: 20px;
-  }
-  #robin {
-    font-size: 20px;
-  }
-  #castle {
-    display: flex;
-    width: 100%;
-    height: 200px;
-    margin: 0;
-  }
-  .column2 img {
-    width: 75%;
-  }
-  #enter {
-    font-size: 30px;
-  }
-  #summary {
-    font-size: 20px;
-  }
-  #thanks {
-    width: 100%;
-  }
-} */
